fixed overlapping icons

--- a/src/App.scss
+++ b/src/App.scss
@@ -105,6 +105,9 @@ main {
     main {
       .layout {
         width: 23rem;
+        .icons {
+          display: none;
+        }
       }
     }
   }
